# Django-Menu

./: .gitignore  README.md  pyproject.toml
django_menu/django_menu/: settings.py  urls.py
django_menu/menu/: models.py
django_menu/menu/migrations/: 0001_initial.py
