[tool.poetry]
name = "django-menu"
version = "0.1.0"
description = ""
authors = ["kuznetsow42 <kuznetsow42@gmail.com>"]
readme = "README.md"
packages = [{include = "django_menu"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
